// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`findMaxDistanceAndPathsOfRootIndex() findMaxDistanceAndPathsOfRootIndex(1, ...) 1`] = `
Object {
  "maxDistance": 4,
  "paths": Array [
    Array [
      1,
      5,
      9,
      10,
      14,
    ],
  ],
}
`;

exports[`getLongestSteepestPath() 1`] = `
Array [
  Object {
    "drop": 8,
    "maxDistance": 4,
    "pathIndices": Array [
      6,
      5,
      9,
      10,
      14,
    ],
    "pathLength": 5,
    "pathValues": Array [
      9,
      5,
      3,
      2,
      1,
    ],
  },
]
`;
